# robot_fingers

./: .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.rst  doc_mainpage.rst  package.xml  pyproject.toml  setup.py
.github/workflows/: build.yml  build_master.yml  build_pr.yml  flake8-problem-matcher.json  gcc_problem_matcher.json  lint.yml  mypy-problem-matcher.json  pr_todo_checks.yml
config/: finger.yml  finger_0.yml  finger_120.yml  finger_240.yml  finger_legacy.yml  fingeredu.yml  fingeredu_0.yml  fingeredu_120.yml  fingeredu_240.yml  fingerpro.yml  onejoint.yml  onejoint_friction_calibration.yml  onejoint_high_load.yaml  single_finger_test.yml  soloeight.yml  trifinger.yml  trifingeredu.yml  trifingerpro.yml  trifingerpro_for_calib.yml  twojoint.yml  twojoint_friction_calibration.yml
demos/: demo_data_logging.py  demo_fake_finger.py  demo_finger_forward_kinematics.py  demo_finger_print_position.py  demo_log_replay_driver.py  demo_onejoint_print_position.py  demo_real_finger.py  demo_simulation_driver.py  demo_simulation_object_tracker.py  demo_single_finger_position_control.py  demo_single_finger_torque_control.py  demo_solo_eight.py  demo_sparse_position_control.py  demo_trifinger.py  demo_trifinger_platform.py  demo_trifinger_platform_log.py  demo_trifinger_print_position.py  demo_trifingeredu.py  demo_trifingerpro.py  demo_trifingerpro_kinematics.py  demo_twojoint_print_position.py
doc/: actions_and_observations.rst  breathing_cat.toml  configuration.rst  getting_started.md  getting_started.rst  hardware_testing.md  hardware_testing.rst  homing.rst  index.md  installation.md  installation.rst  joint_order.rst  simulation_backend.rst  singularity.md  singularity.rst
doc/examples/: demo_single_finger_position_control.rst  demo_single_finger_torque_control.rst  demo_trifinger.rst  index.rst
include/blmc_robots/: clamp.hpp
include/robot_fingers/: clamp.hpp  fake_finger_driver.hpp  finger_driver.hpp  log_replay_driver.hpp  n_finger_driver.hpp  n_joint_blmc_robot_driver.hpp  n_joint_blmc_robot_driver.hxx  one_joint_driver.hpp  pybullet_driver.hpp  real_finger_driver.hpp  solo_eight_driver.hpp  solo_eight_platform_frontend.hpp  trifinger_driver.hpp  trifinger_frontend.hpp  trifinger_platform.hpp  trifinger_platform_frontend.hpp  trifinger_platform_log.hpp  two_joint_driver.hpp
python/robot_fingers/: __init__.py  curses.py  robot.py  utils.py
python/robot_fingers/ros/: __init__.py
python/robot_fingers/tasks/: move_cube.py
robot_fingers/: __init__.py  curses.py  robot.py  utils.py
robot_fingers/ros/: __init__.py
scripts/: calibrate_home_offset.py  check_finger_position_control_error.py  claw_crane.py  construct_object_reset_trajectory.py  demonstrate_trajectory.py  evaluate_log.py  fingeredu_endurance_test.py  fingerpro_endurance_test.py  joint_friction_calibration.py  plot_logged_data.py  plot_post_submission_log.py  plot_run_duration_log.py  position_control_on_off.py  print_position.py  pybullet_backend.py  record_and_play.py  record_and_play_trajectories.py  replay_trajectory.py  robot_log_dat2csv.py  run_onejoint_tests.py  single_finger_assembly_test.py  single_finger_test.py  solo_eight_backend.py  trifinger_backend.py  trifinger_data_backend.py  trifinger_log_replay_backend.py  trifinger_platform_log_analyzer.py  trifinger_robot_backend.py  trifingerpro_offset_calibration.py  trifingerpro_post_submission.py  trifingerpro_print_push_sensor.py  trifingerpro_random.py  trifingerpro_replay_actions_from_log.py  trifingerpro_self_test.py  two_joint_friction_calibration.py
src/: demo_platform_frontend.cpp  solo_eight_platform_frontend.cpp  trifinger_platform_frontend.cpp  trifinger_platform_log.cpp
srcpy/: generic_driver_bindings.hpp  log_replay_driver.cpp  py_one_joint.cpp  py_real_finger.cpp  py_solo_eight.cpp  py_trifinger.cpp  py_two_joint.cpp  pybullet_drivers.cpp
test/: test_clamp.cpp  test_n_joint_blmc_robot_driver.cpp  test_process_action.cpp  test_pybullet_backend.cpp  test_pybullet_backend.py  test_tasks_move_cube.py  test_utils.py
