<?xml version="1.0"?>
<package format="2">
  <name>robot_fingers</name>
  <version>0.3.0</version>
  <description>
      Drivers, examples and basic scripts for the Finger robots.
  </description>

  <maintainer email="felixwidmaier@tue.mpg.de">Felix Widmaier</maintainer>

  <license>BSD</license>

  <url type="website">https://open-dynamic-robot-initiative.github.io/code_documentation/robot_fingers</url>
  <url type="repository">https://github.com/open-dynamic-robot-initiative/robot_fingers</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>blmc_drivers</depend>
  <depend>robot_interfaces</depend>
  <depend>trifinger_cameras</depend>
  <depend>trifinger_object_tracking</depend>
  <depend>yaml_utils</depend>

  <build_depend>mpi_cmake_modules</build_depend>
  <build_depend>pybind11_vendor</build_depend>
  <build_depend>pybind11</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>trifinger_simulation</exec_depend>

  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
